Don't spam the channel with Composing state if the state actually hasn't changed

This fixes delays in messages with some accounts like ICQ/AIM, however if user sends quickly too many messages,
they will still be delayed (by libpurple), just considerably less. Now we're on par with Empathy and Kopete,
that's all we can do about it.

Reviewed-by: George Kiagiadakis
BUG: 300655
FIXED-IN: 0.4.1